--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -373,6 +373,9 @@
   <!-- Registrar Sections & Slots Monitor -->
   <script src="features/registrar/sections-slots/sections-slots.service.js"></script>
   <script src="features/registrar/sections-slots/sections-slots.controller.js"></script>
+  <!-- Registrar: Credit Subjects -->
+  <script src="features/registrar/credit-subjects/credit-subjects.service.js"></script>
+  <script src="features/registrar/credit-subjects/credit-subjects.controller.js"></script>
 </head>
 <body class="bg-gray-50 min-h-screen">
   <!-- Global header (hidden on public upload pages) -->
