--- a/frontend/unity-spa/features/schedules/schedule-edit.html
+++ b/frontend/unity-spa/features/schedules/schedule-edit.html
@@ -105,11 +105,11 @@
                   required
                   class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
             <option value="">{{ vm.loadingClasslists ? 'Loading classlists...' : 'Select a classlist' }}</option>
-            <option ng-repeat="classlist in vm.availableClasslists" value="{{ classlist.intID }}">
+            <option ng-repeat="classlist in (vm.availableClasslists | orderBy:'subject.strCode')" value="{{ classlist.intID }}">
               {{ vm.getClasslistLabel(classlist) }} - {{ vm.getFacultyName(classlist.faculty) }}
             </option>
           </select>
-          <p class="mt-1 text-sm text-gray-500">Only classlists without schedules are shown</p>
+          <p class="mt-1 text-sm text-gray-500">Classlists are sorted by subject code and may include those with existing schedules</p>
         </div>
 
         <!-- Classroom -->
